started on pdf viewer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/XeTeXEngine.js"></script>
+    <script src="/PdfTeXEngine.js"></script>
   </body>
 </html>
